--- a/producto.html
+++ b/producto.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UnderSounds - Iniciar Sesión</title>
+  <title>UnderSounds - Producto</title>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -21,25 +21,26 @@
       </div>
     </div>
     <div class="nav-right">
-      <a href="login.html" id="loginLink" class="login-btn active">Iniciar sesión</a>
+      <a href="login.html" id="loginLink" class="login-btn">Iniciar sesión</a>
     </div>
   </header>
 
-  <!-- Contenido principal: Iniciar sesión -->
-  <main class="content login-page">
-    <h2 class="logo">Iniciar Sesión</h2>
-    <form id="loginForm" class="form">
-      <label for="username">Correo o usuario:</label>
-      <input type="text" id="username" name="username" required>
+  <!-- Contenido principal: Detalles del Producto -->
+  <main class="content">
+    <h1>Nombre del Producto</h1>
+    <p class="product-description">Descripción del producto...</p>
+    <p class="product-price">Precio: $XX.XX</p>
 
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" required>
+    <!-- Botones de acción -->
+    <div class="product-actions">
+      <button class="btn buy-btn">COMPRAR</button>
+      <a href="sello.html" class="btn">IR AL SELLO</a>
+    </div>
 
-      <button type="submit" class="btn">Iniciar sesión</button>
-    </form>
-    <div class="login-options">
-      <p>¿No tienes cuenta? <a href="register.html">Regístrate</a></p>
-      <p><a href="recover.html">¿Olvidaste tu contraseña?</a></p>
+    <!-- Información adicional -->
+    <div class="product-info">
+      <h3>Detalles del Producto</h3>
+      <p>Ejemplo: Una pista, CD, vinilo, etc.</p>
     </div>
   </main>
 
