--- a/register.html
+++ b/register.html
@@ -59,6 +59,7 @@
       <!-- Campo: Contraseña -->
       <label for="password">Contraseña (mínimo 8 caracteres):</label>
       <input type="password" id="password" name="password" required>
+      <span id="passwordError" style="color:red;"></span>
 
       <!-- Campo: Repetir contraseña -->
       <label for="password2">Repetir contraseña:</label>
