--- a/login.html
+++ b/login.html
@@ -34,6 +34,8 @@
 
       <label for="password">Contraseña:</label>
       <input type="password" id="password" name="password" required>
+      <!-- Elemento para mostrar error de contraseña -->
+      <span id="passwordError" style="color: red;"></span>
 
       <button type="submit" class="btn">Iniciar sesión</button>
     </form>
