--- a/register.html
+++ b/register.html
@@ -77,7 +77,7 @@
 
       <!-- Campo: Aceptación de términos y condiciones -->
       <label for="terms">
-        Acepto los <a href="#">términos y condiciones</a>
+        Acepto los <a href="terminos.html">términos y condiciones</a>
         <input type="checkbox" id="terms" name="terms" required>
       </label>
 
