--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <button class="tab active" data-tab="recientes">Recientes</button>
     <button class="tab" data-tab="bestofs">Best Of's</button>
     <a href="tienda.html" class="tab">Tienda</a>
-    <button class="tab" data-tab="amigos">Amigos</button>
+    <a href="amigos.html" class="tab">Amigos</a>
   </div>
 
   <!-- Secciones de cada pestaña -->
