--- a/album.html
+++ b/album.html
@@ -56,7 +56,7 @@
 
     <!-- Botón para ir al artista -->
     <div class="artist-link">
-      <a href="artista.html" class="btn">IR AL ARTISTA</a>
+      <a href="artistas.html" class="btn">IR AL ARTISTA</a>
     </div>
   </main>
 
