--- a/generos.html
+++ b/generos.html
@@ -29,10 +29,15 @@
   <main class="content">
     <h2>Buscar por Géneros</h2>
     <div class="genres-container">
-      <div class="genre">Rock</div>
-      <div class="genre">Pop</div>
-      <div class="genre">Electrónica</div>
-      <div class="genre">Jazz</div>
+      <a href="generos especifico.html" class="card">Rock</a>
+      <a href="generos especifico.html" class="card">Pop</a>
+      <a href="generos especifico.html" class="card">Electrónica</a>
+      <a href="generos especifico.html" class="card">Jazz</a>
+      <a href="generos especifico.html" class="card">Reggaeton</a>
+      <a href="generos especifico.html" class="card">Tecno</a>
+      <a href="generos especifico.html" class="card">Hip Hop</a>
+      <a href="generos especifico.html" class="card">Salsa</a>
+      <a href="generos especifico.html" class="card">...</a>
       <!-- Agrega más géneros según sea necesario -->
     </div>
   </main>
