--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     <!-- Fila de géneros -->
     <h3>Géneros Recientes</h3>
     <div class="row">
-      <a href="generos.html?id=1" class="card">Rock</a>
-      <a href="generos.html?id=2" class="card">Pop</a>
-      <a href="generos.html?id=3" class="card">Electrónica</a>
-      <a href="generos.html?id=4" class="card">Jazz</a>
+      <a href="generos especifico.html?id=1" class="card">Rock</a>
+      <a href="generos especifico.html?id=2" class="card">Pop</a>
+      <a href="generos especifico.html?id=3" class="card">Electrónica</a>
+      <a href="generos especifico.html?id=4" class="card">Jazz</a>
     </div>
   </section>
 
@@ -88,10 +88,10 @@
     <!-- Fila de géneros Best Of's -->
     <h3>Mejores Géneros</h3>
     <div class="row">
-      <a href="generos.html?id=1" class="card">Rock</a>
-      <a href="generos.html?id=2" class="card">Pop</a>
-      <a href="generos.html?id=3" class="card">Electrónica</a>
-      <a href="generos.html?id=4" class="card">Jazz</a>
+      <a href="generos especifico.html?id=1" class="card">Rock</a>
+      <a href="generos especifico.html?id=2" class="card">Pop</a>
+      <a href="generos especifico.html?id=3" class="card">Electrónica</a>
+      <a href="generos especifico.html?id=4" class="card">Jazz</a>
     </div>
   </section>
 
