--- a/tienda.html
+++ b/tienda.html
@@ -25,23 +25,17 @@
     </div>
   </header>
 
-  <!-- Menú de pestañas principal: Recientes, Best Of's, Tienda, Amigos -->
-  <div class="tabs">
-    <a href="index.html" class="tab">Recientes</a>
-    <a href="index.html#bestofs" class="tab">Best Of's</a>
-    <a href="tienda.html" class="tab active">Tienda</a> <!-- La pestaña de Tienda está activa -->
-    <a href="amigos.html" class="tab">Amigos</a>
-  </div>
-
   <!-- Menú de pestañas secundario: CDs, Cassettes, Vinilos, Merchandising, Otros -->
-  <div class="tabs">
-    <button class="tab active" data-tab="cds">CDs</button>
-    <button class="tab" data-tab="cassettes">Cassettes</button>
-    <button class="tab" data-tab="vinilos">Vinilos</button>
-    <button class="tab" data-tab="merchandising">Merchandising</button>
-    <button class="tab" data-tab="otros">Otros</button>
+  <div class="store-tabs">
+    <div class="tabs">
+      <button class="tab active" data-tab="cds">CDs</button>
+      <button class="tab" data-tab="cassettes">Cassettes</button>
+      <button class="tab" data-tab="vinilos">Vinilos</button>
+      <button class="tab" data-tab="merchandising">Merchandising</button>
+      <button class="tab" data-tab="otros">Otros</button>
+    </div>
   </div>
-
+  
   <!-- Contenido principal: Tienda -->
   <main class="content">
     <!-- Sección de CDs (visible por defecto) -->
