--- a/ayuda.html
+++ b/ayuda.html
@@ -7,12 +7,14 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
-    <div class="nav-left">
-      <a href="index.html" class="logo">UnderSounds</a>
-    </div>
-    <!-- ... el resto del header si lo deseas ... -->
-  </header>
+  <div id="header-placeholder"></div>
+  <script>
+    fetch('header.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('header-placeholder').innerHTML = data;
+      });
+  </script>
 
   <main class="content">
     <h2>Ayuda</h2>
