--- a/header.html
+++ b/header.html
@@ -32,9 +32,9 @@
     <div class="profile-container" id="profileContainer">
       <img src="assets/images/profile.png" alt="Perfil" class="profile-icon" id="profileIcon" />
       <div class="profile-dropdown" id="profileDropdown">
-        <a href="#">Editar perfil</a>
+        <a href="edit_perfil.html">Editar perfil</a>
         <a href="#">Lista de Me gusta</a>
-        <a href="#">Mis compras</a>
+        <a href="mis_compras.html">Mis compras</a>
         <a href="amigos.html">Gestionar amigos</a>
         <a href="index.html" class="logout-link">Cerrar sesión</a>
       </div>
