--- a/recover.html
+++ b/recover.html
@@ -15,7 +15,7 @@
     <form id="recoverForm" class="form">
       <label for="email">Introduce tu correo electrónico:</label>
       <input type="email" id="email" name="email" required>
-      <button type="submit" class="btn">Enviar instrucciones</button>
+      <a href="login.html" class="recover-btn">Enviar instrucciones</a>
     </form>
     <div class="login-options">
       <p>¿Recordaste tu contraseña? <a href="login.html">Inicia sesión</a></p>
