// Content: Update styles.css and edit_perfil.html // Changes to be committed:

--- a/header.html
+++ b/header.html
@@ -33,7 +33,7 @@
       <img src="assets/images/profile.png" alt="Perfil" class="profile-icon" id="profileIcon" />
       <div class="profile-dropdown" id="profileDropdown">
         <a href="edit_perfil.html">Editar perfil</a>
-        <a href="#">Lista de Me gusta</a>
+        <a href="likes.html">Lista de Me gusta</a>
         <a href="mis_compras.html">Mis compras</a>
         <a href="amigos.html">Gestionar amigos</a>
         <a href="index.html" class="logout-link">Cerrar sesión</a>
