--- a/likes.html
+++ b/likes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mis Compras</title>
+  <title>Mis Favoritos</title>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -17,14 +17,32 @@
             });
     </script>
   <main class="content">
-    <section id="compras">
-      <h2>Mis Compras</h2>
-      <h3>Lista de Compras</h3>
-      <ul>
-        <li>Producto 1 - $10.00</li>
-        <li>Producto 2 - $20.00</li>
-        <li>Producto 3 - $30.00</li>
-      </ul>
+    <section id="favoritos">
+      <h2>Mis Favoritos</h2>
+      <div class="favorites-section">
+        <h3>Álbumes</h3>
+        <ul>
+          <li>Álbum 1</li>
+          <li>Álbum 2</li>
+          <li>Álbum 3</li>
+        </ul>
+      </div>
+      <div class="favorites-section">
+        <h3>Canciones</h3>
+        <ul>
+          <li>Canción 1</li>
+          <li>Canción 2</li>
+          <li>Canción 3</li>
+        </ul>
+      </div>
+      <div class="favorites-section">
+        <h3>Artistas</h3>
+        <ul>
+          <li>Artista 1</li>
+          <li>Artista 2</li>
+          <li>Artista 3</li>
+        </ul>
+      </div>
     </section>
   </main>
   <!-- Botón de Ayuda Flotante -->
