--- a/header.html
+++ b/header.html
@@ -21,7 +21,7 @@
           <!-- Los productos del carrito se mostrarán aquí -->
         </div>
         <div class="cart-actions">
-          <a href="compra.html" class="btn-compra">Comprar</a>
+          <a href="resumen_compra.html" class="btn-compra">Comprar</a>
         </div>
       </div>
     </div>
